The Play button on the Video Banner is not working Fixed and Nva Bar in features page not working fixed

--- a/features.html
+++ b/features.html
@@ -129,7 +129,7 @@
             />
           </a>
           <nav
-            class="hidden md:flex justify-center items-center rounded-full bg-gray-300 absolute top-4 md:top-0 right-4 md:right-0 m-4 md:m-10"
+            class="hidden md:flex justify-center items-center rounded-full bg-gray-300 absolute top-4 md:top-0 right-4 md:right-0 m-4 md:m-10 z-[100]"
           >
             <ul
               id="menu"
@@ -643,7 +643,7 @@
               <h2 class="">Skin-safe <br />Cleaning Solution</h2>
             </div>
           </div>
-          <div class="flex w-full slide-in-left">
+          <div class="md:flex md:w-full slide-in-left">
             <ul
               class="md:list-disc space-y-4 font-['Urbanist'] text-[11px] md:text-xl"
             >
@@ -663,7 +663,7 @@
             </ul>
           </div>
           <div
-            class="hidden md:flex justify-end"
+            class="hidden md:w-full md:flex justify-end"
           >
             <div
               class="text-[28px] md:text-4xl text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-40 w-40 md:h-56 md:w-56 flex justify-end items-center slide-in-up text-right"
