--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body>
   <section class="flex flex-col items-center w-full">
-    <div class="w-full relative">
+    <div class="w-full relative" id="gradient">
       <!-- Navbar -->
       <div class="flex w-full items-center p-10 md:p-16 gap-y-4 flex-row justify-between absolute">
         <a href="index.html">
@@ -94,10 +94,10 @@
             Friendly Wipes</h1>
           <p class="text-white text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
         </div>
-        <div class="hidden w-full bg-[url('/public/welcome.png')] bg-contain bg-right bg-no-repeat">
+        <div class="hidden w-full bg-[url('/public/welcome.png')] bg-contain bg-right bg-no-repeat" id="welcomeDiv">
         </div>
       </div>
-      <video src="./public/landing.mp4" class="object-cover h-[900px] md:h-full " width="100%" autoplay loop muted></video>
+      <video id="videoPlayer" src="./public/landing.mp4" class="object-cover h-[900px] md:h-full " width="100%" autoplay loop muted></video>
     </div>
   </section>
 
@@ -234,7 +234,7 @@
 
   <!-- Image Gallery Section -->
 
-  <section class="py-0 md:py-24 relative">
+  <section class="py-0 md:py-10 relative">
     <div class="swiper-container z-50 overflow-hidden">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -266,7 +266,7 @@
     </div>
     <div class="bg-white relative bottom-20 h-36 w-full z-[100] rounded-[50%]"></div>
   </section>
-  <section class="px-4 md:px-40 pb-12 md:py-36">
+  <section class="px-4 md:px-40 pb-12 md:py-10">
     <div class="w-full group" id="document-section">
       <div
         class="md:gap-x-40 flex justify-between items-center opacity-0 transition-opacity duration-150 group-hover:opacity-100"
@@ -371,9 +371,27 @@
       </div>
     </div>
   </section>
-  <!-- <script>
-    AOS.init();
-  </script> -->
+  <script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const gradient = document.getElementById('gradient');
+    const welcomeDiv = document.getElementById('welcomeDiv');
+    const videoPlayer = document.getElementById('videoPlayer');
+
+    // Initially show the gradient and the welcome div
+    gradient.classList.add('bg-radial-gradient');
+    welcomeDiv.classList.remove('hidden');
+      setTimeout(() => {
+        gradient.classList.remove('bg-radial-gradient');
+        welcomeDiv.classList.add('hidden');
+
+        // Add a delay before playing the video
+        setTimeout(() => {
+            videoPlayer.play();
+            console.log("working");
+        }, 2000);  
+    },2000); 
+});
+  </script>
   <script>
     const documentSection = document.getElementById("document-section");
     const documentHeading = document.getElementById("document-heading");
